Fixed layout for collapsible table rows (was broken in Bootstrap 3.1.0).

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -100,6 +100,11 @@ a.navbar-brand {
 .hidden {
   visibility: hidden;
 }
+
+.btn-collapsible {
+  border: 0px;
+  padding: 0px;
+}
   
 /* From Twitter Bootstrap's documentation:
  *   "Inputs, selects, and textareas are 100% wide by default in Bootstrap. 
